--- a/404.html
+++ b/404.html
@@ -8,7 +8,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <title>Page Not Found</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
-  <link rel="stylesheet" href="/css/bedrock.css" type="text/css" />
+  <link rel="stylesheet" href="/css/bedrock.min.css" type="text/css" />
   <style>
 	article { width: auto; max-width: 500px; text-align:center; margin:0px auto; padding: 0px; }
   </style>
